; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_pages.c_pages_trim.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_pages.c_pages_trim.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @pages_trim(i8* %0, i64 %1, i64 %2, i64 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = ptrtoint i8* %11 to i64
  %13 = load i64, i64* %7, align 8
  %14 = add i64 %12, %13
  %15 = inttoptr i64 %14 to i8*
  store i8* %15, i8** %9, align 8
  %16 = load i64, i64* %6, align 8
  %17 = load i64, i64* %7, align 8
  %18 = load i64, i64* %8, align 8
  %19 = add i64 %17, %18
  %20 = icmp uge i64 %16, %19
  %21 = zext i1 %20 to i32
  %22 = call i32 @assert(i32 %21)
  %23 = load i64, i64* %6, align 8
  %24 = load i64, i64* %7, align 8
  %25 = sub i64 %23, %24
  %26 = load i64, i64* %8, align 8
  %27 = sub i64 %25, %26
  store i64 %27, i64* %10, align 8
  %28 = load i64, i64* %7, align 8
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %34

30:                                               ; preds = %4
  %31 = load i8*, i8** %5, align 8
  %32 = load i64, i64* %7, align 8
  %33 = call i32 @pages_unmap(i8* %31, i64 %32)
  br label %34

34:                                               ; preds = %30, %4
  %35 = load i64, i64* %10, align 8
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %45

37:                                               ; preds = %34
  %38 = load i8*, i8** %9, align 8
  %39 = ptrtoint i8* %38 to i64
  %40 = load i64, i64* %8, align 8
  %41 = add i64 %39, %40
  %42 = inttoptr i64 %41 to i8*
  %43 = load i64, i64* %10, align 8
  %44 = call i32 @pages_unmap(i8* %42, i64 %43)
  br label %45

45:                                               ; preds = %37, %34
  %46 = load i8*, i8** %9, align 8
  ret i8* %46
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @pages_unmap(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
